--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "alexa-skill",
-  "version": "1.0.0",
-  "description": "CodingJam alexa skill",
-  "main": "index.js",
+  "name": "codingjam-alexa-skill",
+  "version": "0.0.1",
+  "description": "La skill Alexa ufficiale di CodingJam",
+  "author": "Francesco Strazzullo (francesco.strazzullo86@gmail.com)",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/coding-jam/alexa-skill.git"
   },
-  "author": "",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/coding-jam/alexa-skill/issues"
   },
   "homepage": "https://github.com/coding-jam/alexa-skill#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
+  },
   "scripts": {
-    "deploy": "sls deploy"
+    "predeploy": "cd lambda/custom && npm i",
+    "deploy": "ask deploy"
   },
   "devDependencies": {
-    "serverless": "1.27.3",
-    "standard": "11.0.1"
-  },
-  "dependencies": {
-    "ask-sdk-core": "2.0.5",
-    "ask-sdk-model": "1.3.1",
-    "cheerio": "1.0.0-rc.2",
-    "lodash": "4.17.10",
-    "request": "2.87.0"
+    "ask-cli": "1.4.9",
+    "ask-sdk-core": "2.0.0",
+    "ask-sdk-model": "1.0.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.0",
+    "standard": "12.0.1"
   }
 }
